--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Lightweight, high performance particles in HTML Canvas">
 
     <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Averia+Sans+Libre:300&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web:700&display=swap&text=SPARTICLE">
     <link rel="stylesheet" href="/global.css">
     <link rel="stylesheet" href="/build/bundle.css">
     <script defer src="/build/bundle.js"></script>
@@ -19,5 +19,5 @@
 
   <body>
   </body>
-  
+
 </html>
