--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
     <link rel="stylesheet" href="/build/bundle.css">
     <script defer src="/build/bundle.js"></script>
     
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15937605-12"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-15937605-12');
+    </script>
+
   </head>
 
   <body>
