--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
+    <!-- Primary Meta Tags -->
     <title>SparticlesJS</title>
+    <meta name="title" content="SparticlesJS">
     <meta name="description" content="Lightweight, high performance particles in HTML Canvas">
+    <meta name="thumbnail" content="thumb.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sparticlesjs.dev/">
+    <meta property="og:title" content="SparticlesJS">
+    <meta property="og:description" content="Lightweight, high performance particles in HTML Canvas">
+    <meta property="og:image" content="thumb.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sparticlesjs.dev/">
+    <meta property="twitter:title" content="SparticlesJS">
+    <meta property="twitter:description" content="Lightweight, high performance particles in HTML Canvas">
+    <meta property="twitter:image" content="thumb.png">
 
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web:700&display=swap&text=SPARTICLE">
