--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,21 @@
     <title>SparticlesJS</title>
     <meta name="title" content="SparticlesJS">
     <meta name="description" content="Lightweight, high performance particles in HTML Canvas">
-    <meta name="thumbnail" content="thumb.png" />
+    <meta name="thumbnail" content="https://sparticlesjs.dev/thumb.png" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sparticlesjs.dev/">
     <meta property="og:title" content="SparticlesJS">
     <meta property="og:description" content="Lightweight, high performance particles in HTML Canvas">
-    <meta property="og:image" content="thumb.png">
+    <meta property="og:image" content="https://sparticlesjs.dev/thumb.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sparticlesjs.dev/">
     <meta property="twitter:title" content="SparticlesJS">
     <meta property="twitter:description" content="Lightweight, high performance particles in HTML Canvas">
-    <meta property="twitter:image" content="thumb.png">
+    <meta property="twitter:image" content="https://sparticlesjs.dev/thumb.png">
 
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web:700&display=swap&text=SPARTICLE">
