--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web:700&display=swap&text=SPARTICLE">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code:300&display=swap">
     <link rel="stylesheet" href="/global.css">
     <link rel="stylesheet" href="/build/bundle.css">
     <script defer src="/build/bundle.js"></script>
