add samesite ga cookies

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'UA-15937605-12');
+      gtag('config', 'UA-15937605-12', { cookie_flags: 'SameSite=None;Secure' });
     </script>
 
   </head>
